# fast-api-lms

./: alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 614bd92a58f3_.py
api/: users.py
db/: db_setup.py
