[tool.poetry]
name = "firstapi"
version = "0.1.0"
description = "Official FastApi learning course"
authors = ["Chetan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
